# supportsx

./: LICENSE  README.md  changelog.md  pyproject.toml
src/supportsx/: __init__.py  _supports.py
src/supportsx/u/: __init__.py  _unions.py
