# Metadata specifications: https://packaging.python.org/en/latest/specifications/section-distribution-metadata/
[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
# See: https://packaging.python.org/en/latest/specifications/name-normalization/#name-format
name = "supportsx"
description = "A Python library that supplies runtime-checkable, fully parameterized, and well-documented protocols for nearly all dunder methods/attributes."
authors = [
    { name = "Tanner Corcoran", email = "tannerbcorcoran@gmail.com" },
]
maintainers = [
    { name = "Tanner Corcoran", email = "tannerbcorcoran@gmail.com" },
]

# See: https://packaging.python.org/en/latest/specifications/dependency-specifiers/#dependency-specifiers
dependencies = [
    "typing_extensions >= 4.4.0; python_version < '3.10'",
]

# See: https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html#dynamic-metadata
dynamic = [
    "version",
]
keywords = [
    "supports",
    "protocols",
]
requires-python = ">=3.9"

# See: https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
    "Topic :: Utilities",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
]

license.file = "LICENSE"

# See: https://packaging.python.org/en/latest/specifications/pyproject-toml/#readme
readme = "README.md"

# See: https://packaging.python.org/en/latest/specifications/pyproject-toml/#urls
[project.urls]
Homepage = "https://github.com/tanrbobanr/supportsx"
Documentation = "https://github.com/tanrbobanr/supportsx/blob/main/README.md"
Changelog = "https://github.com/tanrbobanr/supportsx/blob/main/CHANGELOG.md"
Source = "https://github.com/tanrbobanr/supportsx"
Issues = "https://github.com/tanrbobanr/supportsx/issues"

# See: https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html#dynamic-metadata
[tool.setuptools.dynamic]
version = { attr = "supportsx.__version__" }

[tool.setuptools.package-data]
supportsx = ["py.typed"]
